--- a/assets/css/modules/_color.scss
+++ b/assets/css/modules/_color.scss
@@ -2,10 +2,10 @@
 * Color
 *********************/
 .bg-color--keycolor {
-  background-color: #39b54a;
+  background-color: #222A38;
 }
 .bg-color--subcolor {
-  background-color: #d9e021;
+  background-color: #065F46;
 }
 .bg-color--gray {
   background-color: #e6e6e6;
